# X1_ROS2_ws

./: .gitignore  README.md  frames_2024-10-10_10.40.36.gv  map_save.pgm  map_save.yaml  map_serial.data  my_map_save.pgm  my_map_save.yaml  my_map_serial.data
.devcontainer/: Dockerfile  devcontainer.json  ros_entrypoint.sh
docs/: docker_setup.md  onnxrt_setup.md
robot_ws/: .Docker.swp  Dockerfile  ros_entrypoint.sh  start_ros2_container.sh
src/orbbec_camera/config/: camera_params.yaml  camera_params.yaml.bak  camera_params.yaml.bak2
src/orbbec_camera/launch/: astra.launch.py
src/rosmaster_driver_install/: setup.py
src/rosmaster_driver_install/Rosmaster_Lib.egg-info/: PKG-INFO
src/x1_base_node/: CMakeLists.txt  package.xml
src/x1_bringup/: package.xml  setup.cfg  setup.py
src/x1_bringup/config/: ekf_params.yaml
src/x1_bringup/launch/: launch_odom.py  launch_robot.py  odom_launch.py  robot_launch.py  robot_test.launch.py  rviz_launch.py  visualize.launch.py  x1.launch.py  x1_bringup.launch.py
src/x1_bringup/x1_bringup/: Mcnamu_driver.py  covariance_filter.py  image_republisher.py
src/x1_control/: CMakeLists.txt  package.xml
src/x1_control/config/: joy_config.yaml  joy_teleop.yaml  twist_mux.yaml  x1_controllers.yaml
src/x1_control/launch/: twist_joy.launch.py  x1_joy.launch.py  x1_keyboard.launch.py
src/x1_control/x1_control/: turtlebot_joy.py  twist_joy.py  x1_joy.py  x1_keyboard.py
src/x1_description/: CMakeLists.txt  package.xml
src/x1_description/config/: gz_bridge.yaml  mapper_params_online_async.yaml
src/x1_description/launch/: display.launch.py  gazebo.launch.py  launch_sim.launch.py  lidar_test.launch.py  online_async_launch.py
src/x1_description/rviz/: display.rviz  real.rviz
src/x1_description/urdf/: camera.xacro  depth_camera.xacro  lidar.xacro  x1.urdf.xacro  x1.urdf.xacro.backup  x1_gazebo.xacro  x1_ros2_control.xacro
src/x1_description/worlds/: empty.world  world.sdf
src/x1_drl_interfaces/: CMakeLists.txt  package.xml
src/x1_drl_interfaces/action/: NavigateToGoal.action
src/x1_drl_policy/: package.xml  setup.cfg  setup.py
src/x1_drl_policy/x1_drl_policy/: face_follower_node.py  policy_node.py
src/x1_msgs/: CMakeLists.txt  package.xml
src/x1_msgs/msg/: Position.msg  TargetArray.msg
src/x1_visual/: package.xml  setup.cfg  setup.py  test.py
src/x1_visual/x1_visual/: emotion_recognition_node.py  face_detection_node.py
src/ydlidar_ros2_driver/: README.md
src/ydlidar_ros2_driver/launch/: ydlidar_launch_view.py
(+8 files in other folders)
